--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "botbuilder": "^3.7.0",
     "d3": "^4.9.1",
     "jquery": "^3.2.1",
-    "restify": "^4.3.0"
+    "restify": "^4.3.0",
+    "updated-jqplot": "^1.0.9-2"
   }
 }
