--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
   },
   "dependencies": {
     "botbuilder": "^3.7.0",
-    "d3": "^4.9.1",
+    "highcharts": "^5.0.12",
     "jquery": "^3.2.1",
-    "restify": "^4.3.0",
-    "updated-jqplot": "^1.0.9-2"
+    "restify": "^4.3.0"
   }
 }
