--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "webpack": "^2.4.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "botbuilder": "^3.7.0",
+    "d3": "^4.9.1",
     "highcharts": "^5.0.12",
     "jquery": "^3.2.1",
+    "json-2-csv": "^2.1.1",
     "restify": "^4.3.0"
   }
 }
